infra/k8s-manifests/deployment-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory-api-deployment
  namespace: dev
  labels:
    app: inventory-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: inventory-api
  template:
    metadata:
      labels:
        app: inventory-api
    spec:
      serviceAccountName: external-secrets # Required for IRSA/Secrets Manager access
      initContainers: # <-- ADD THIS BLOCK
      - name: check-db-ready
        image: busybox:1.36
        command: ['sh', '-c', 
          'until nc -z -w 1 ${DB_HOST} 5432; do echo waiting for db; sleep 2; done;']
      containers:
      - name: inventory-api
        image: 440491339319.dkr.ecr.us-east-1.amazonaws.com/eks-microservices-inventory-api:v2.0.0
        imagePullPolicy: Always
        
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "250m"
            
        ports:
        - containerPort: 8002
        
        # Health Checks (Required Deliverable)
        livenessProbe:
          httpGet:
            path: /
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 8002
          initialDelaySeconds: 10
          periodSeconds: 15
          
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 1001
