infra/k8s-manifests/service-inventory.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-api-service
  namespace: dev
spec:
  selector:
    app: inventory-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: ClusterIP
