infra/k8s-manifests/service-orders.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-api-service
  namespace: dev
spec:
  selector:
    app: orders-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8001
  type: ClusterIP
