infra/k8s-manifests/service-products.yaml
apiVersion: v1
kind: Service
metadata:
  name: products-api-service
  namespace: dev
spec:
  selector:
    app: products-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
